Fix top alignment

--- a/src/components/AaJumbotron/AaJumbotron.scss
+++ b/src/components/AaJumbotron/AaJumbotron.scss
@@ -47,7 +47,7 @@
 }
 
 .heroimage.tophero {
-    // margin-top: -115px;
+    margin-top: -110px;
     h1 {
         font-size: 3em;
         @media (min-width: 768px) {
